syntax = "proto3";

package raft;

message AppendEntriesRequest {
  string leader_id = 1;
  uint64 term = 2;
  uint64 prev_log_index = 3;
  uint64 prev_log_term = 4;
  uint64 leader_commit = 5;
  repeated LogEntry entries = 6;
}

message LogEntry {
  uint64 term = 1;
  uint64 index = 2;
  oneof command {
      LogCommandNoop noop = 3;
      LogCommandKVPut kv_put = 4;
  }
}

message LogCommandNoop {}
message LogCommandKVPut {
  string key = 1;
  bytes value = 2;
}

message AppendEntriesResponse {
  bool success = 1;
  uint64 term = 2;
}

message RequestVoteRequest {
  uint64 term = 1;
  string candidate_id = 2;
  uint64 last_log_index = 3;
  uint64 last_log_term = 4;
}

message RequestVoteResponse {
  bool success = 1;
  uint64 term = 2;
}

service RaftService {
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
}

message CommandRequest {
  oneof command {
    KVCommandPut kv_put = 1;
  }
}

message KVCommandPut {
  string key = 1;
  bytes value = 2;
}

message CommandResponse {}

message QueryRequest {
  oneof query {
    KVQueryGet kv_get = 1;
  }
}

message KVQueryGet {
  string key = 1;
}

message QueryResponse {
  string leader_address = 1;
  oneof query {
    KVQueryGetResponse kv_get = 2;
  }
}

message KVQueryGetResponse {
  bytes value = 1;
}

service ClientService {
  rpc Command(CommandRequest) returns (CommandResponse);
  rpc Query(QueryRequest) returns (QueryResponse);
}